20030216
 - (djm) Make this work with -current pfsync
 - (djm) Add support for older pfsync (<=3.4) with -DOLD_PFSYNC flag
 - (djm) Release pfflowd-0.4

20031109
 - (djm) Lock underlying BPF device using ioctl available in OpenBSD 3.5

20030815
 - (djm) Add -n option to usage message. Spotted by jose AT monkey.org
 - (djm) Document current issues in manpage
 - (djm) Fix manpage formatting command hint in README
 - (djm) Release pfflowd-0.3

20030623
 - (djm) Drop privileges and chroot to /var/empty on non-debug startup
 - (djm) Release pfflowd-0.2

20030622
 - (djm) Initial release: pfflowd-0.1